rancher/blog/blog-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deo-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      run: deo-blog
  template:
    metadata:
      labels:
        run: deo-blog
    spec:
      imagePullSecrets:
        - name: deo-docker
      containers:
        - name: deo-blog
          image: aa864451000/hexo-blog:master
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              protocol: TCP
          resources:
            limits:
              cpu: "500m"
              memory: "200Mi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: deo-blog
spec:
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    run: deo-blog
  clusterIP: None
