rancher/blog/blog-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deo-blog-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - blog.deoooo.me
      secretName: blog-deoooo-me-tls-secret
  rules:
    - host: blog.deoooo.me
      http:
        paths:
          - path: /
            backend:
              serviceName: deo-blog
              servicePort: 8080
